deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-katana-app
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: sample-katana-app
  template:
    metadata:
      name: sample-katana-app
      labels:
        app: sample-katana-app
    spec:
      containers:
        - name: sample-katana-app
          image: gcr.io/pma-learn/katana-sample-app
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
              ephemeral-storage: 1Gi
            requests:
              cpu: 250m
              memory: 512Mi
              ephemeral-storage: 1Gi
