service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-katana-app
  labels:
    app: sample-katana-app
spec:
  selector:
    app: sample-katana-app
  ports:
    - name: http
      port: 80
      targetPort: 80
